# Automatic_grading

./: .gitignore  LICENSE  README.md  build.spec  config.json  pyproject.toml  requirements.txt  start.bat  start.py  start.sh  上层GUI.py  自动阅卷系统GUI.py  评分标准.txt
.claude/: settings.local.json
.github/workflows/: release.yml
modules/: 自动填分模块.py  自动截图模块.py  自动评分模块.py  规则调优模块.py  评分数据库模块.py
