[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "automatic-grading"
version = "1.0.0"
description = "基于 AI 的自动化阅卷工具，支持截图识别、AI 评分、自动填分全流程"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "Pillow>=10.0.0",
    "pyautogui>=0.9.54",
    "requests>=2.31.0",
    "zhipuai>=2.1.0",
]

[project.urls]
Homepage = "https://github.com/kcdey01/Automatic_grading"
Repository = "https://github.com/kcdey01/Automatic_grading"
